continued building the site

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,32 @@
     <title>CVA Netwerk Midden-Holland</title>
     <link rel="stylesheet" href="bootstrap/bootstrap.css">
     <link rel="stylesheet" href="bootstrap/bootstrap-theme.css">
-    <link rel="stylesheet" href="styles.css">    
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+
+    <nav class="navbar navbar-dark bg-primary">
+        <a class="navbar-brand" href="#">CVA Netwerk Midden-Holland</a>
+    </nav>
     <div class="container">
         <div class="row">
-            <div class="col-lg-8">
-                <img src="logo_CVA-netwerk.svg" alt="CVA Netwerk Midden-Holland" class="scale__img">
-            </div>
-            <div class="col-lg-4"><h1>            CVA Netwerk Midden-Holland
-                </h1></div>
+            <aside class="col-lg-3">
+                    <div class="logo">
+                            <img src="logo_CVA-netwerk.svg" alt="CVA Netwerk Midden-Holland" class="scale__img">
+                        </div>
+            </aside>
+            <main class="col-lg-7 col-lg-offset-1">
+                         
+                <div class="">
+                    <h1> CVA Netwerk Midden-Holland </h1>
+                    <p class="lead">Welkom op de website van CVA netwerk Midden-Holland</p>
+                    
+                    <p>Op dit moment wordt er nog gewerkt aan de website. Binnenkort kunt u hier terecht voor meer informatie over ons netwerk.</p>
+                </div>
+            </main>
         </div>
-    </div>   
+        </div>
 </body>
+
 </html>
